# viddy

./: .envrc  .gitignore  .golang-ci.yml  .goreleaser.yml  Cargo.toml  Makefile  README.md  args.go  args_test.go  build.rs  config.go  config_test.go  generator.go  go.mod  go.sum  history.go  main.go  main_test.go  run.go  run_windows.go  snapshot.go  snapshot_test.go  viddy.go
.config/: config.json5
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  lint.yml  release.yml  test.yml
pkg/config/: config.go
pkg/generator/: generator.go
pkg/run/: result.go  run.go  run_windows.go
pkg/store/: store.go
pkg/viddy/: viddy.go
pkg/view/: help.go  history.go  query.go  view.go
pkg/worker/: worker.go  worker_test.go
src/: action.rs  app.rs  bytes.rs  cli.rs  components.rs  config.rs  diff.rs  exec.rs  main.rs  mode.rs  old_config.rs  runner.rs  search.rs  store.rs  termtext.rs  tui.rs  types.rs  utils.rs  widget.rs
src/components/: clock.rs  command.rs  execution_result.rs  fps.rs  help.rs  history.rs  home.rs  interval.rs  prompt.rs  status.rs
src/store/: memory.rs  sqlite.rs
src/widget/: history_item.rs
viddy/: config.go  config_test.go  generator.go  run.go  run_windows.go  snapshot.go  viddy.go
